Fix #2 PhantomJS needs a higher z-index in compare mode

--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -195,7 +195,7 @@
   display: none;
 }
 .map-right {
-  z-index: 1;
+  z-index: 2;
   position:absolute;
   top: 10.3em;
   bottom: 5em;
